objects/wkcc__CmdCtrLogSettings__mdt.object
<CustomObject>
    <fields>
        <fullName>wkcc__DoesDelPersistentData__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, Workplace Command Center deletes persistently-stored logging data according to the MaxPersistentDataRows__c value.</description>
        <label>Delete History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__EnableLogging__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true, Workplace Command Center performs logging functions according to the settings in CommandCtrLogSettings__mdt. The default is true.</description>
        <label>Enable Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__MaxPersistentDataRows__c</fullName>
        <description>When greater than 0, this value determines how many rows to keep when DoesDelPersistentData__c is true.</description>
        <label>Maximum History Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Command Center Log Settings</label>
    <pluralLabel>Command Center Log Settings</pluralLabel>
</CustomObject>